[tool.poetry]
name = "kae-dbt"
version = "0.4.8"
description = "KAE utilities for dbt"
authors = ["Marcos Alcozer <marcos@alcozer.dev>", "Zander Stachniak <zander@alcozer.dev>"]
readme = "README.md"
packages = [{include = "kae_dbt"}]

[tool.poetry.dependencies]
python = "~3.12"
dbt-bigquery = "~1.8"

[tool.poetry.group.dev.dependencies]
sqlfluff = "~3.1"
sqlfluff-templater-dbt = "~3.1"
ruff = "~0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
