[tool.poetry]
name = "kae-dbt"
version = "0.4.9"
description = "KAE utilities for dbt"
authors = ["Marcos Alcozer <marcos@alcozer.dev>", "Zander Stachniak <zander@alcozer.dev>"]
readme = "README.md"
packages = [{include = "kae_dbt"}]

[tool.poetry.dependencies]
python = "~3.12"
dbt-core = "1.9.4"
dbt-bigquery = "1.9.1"

[tool.poetry.group.dev.dependencies]
sqlfluff = "~3.4"
sqlfluff-templater-dbt = "~3.4"
ruff = "~0.11"
pre-commit = "~4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
