[project]
name = "kae-dbt"
version = "0.5.0"
description = "KAE utilities for dbt"
readme = "README.md"
authors = [
  {name = "Marcos Alcozer", email = "marcos@alcozer.dev"},
  {name = "Zander Stachniak", email = "zander@alcozer.dev"},
]
maintainers = [
  {name = "K12 Analytics Engineering", email = "team@alcozer.dev"}
]
dependencies = [
    "dbt-core==1.8.2",
    "dbt-bigquery==1.8.2",
]
packages = [{include = "kae_dbt"}]
requires-python = "~=3.12"

[dependency-groups]
dev = [
    "sqlfluff~=3.4",
    "sqlfluff-templater-dbt~=3.4",
    "ruff~=0.12",
    "pre-commit~=4.2",
]
